--- a/tychr-frontend/package.json
+++ b/tychr-frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-otp-input": "^3.1.1"
+    "react-otp-input": "^3.1.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
